--- a/index.html
+++ b/index.html
@@ -14,39 +14,6 @@
 <input id="conv"type="button"value="変換"onclick="conv()"><br>
 <canvas id="c"></canvas>
 </body>
-<script>
-var v;
-function conv(){
-    var x=parseInt(xsize.value);
-    var y=parseInt(ysize.value);
-    var s='data:image/svg+xml;charset=utf8,'+encodeURIComponent(v);
-    c.width=x;c.height=y;
-    var img=new Image();
-    img.src=s;
-    img.onload=()=>{
-        var ctx=c.getContext('2d');
-        ctx.drawImage(img,0,0,x,y);
-    }
-}
-function filein(){
-    var reader=new FileReader();
-        reader.onload=()=>{
-            v=reader.result;
-        }
-        reader.readAsText(f.files[0]);
-}
-const SVG='data:image/svg+xml;charset=utf8,'+
-encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#141E32"><path d="M3 4v17h6v-12h6v12h6v-16a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2M4.5 16.5h3v3h-3v-3M16.5 16.5h3v3h-3v-3"/><style>@media(prefers-color-scheme:dark){path{fill:#BBB;}}</style></svg>');
-fav.href=SVG;
-</script>
-<style>
-body{
-    padding:2em;
-    background-color:#F0F0F0;
-    color:#505050;
-}
-input{border:none;}
-#conv{background-color:#FFF;}
-#conv:hover{background-color:#D0D0D0;}
-</style>
+<script>let conv=e=>{let t=parseInt(xsize.value),a=parseInt(ysize.value),l="data:image/svg+xml;charset=utf8,"+encodeURIComponent(v),s=(c.width=t,c.height=a,new Image);s.src=l,s.onload=()=>{c.getContext("2d").drawImage(s,0,0,t,a)}},filein=e=>{let t=new FileReader;t.onload=()=>{v=t.result},t.readAsText(f.files[0])};const SVG="data:image/svg+xml;charset=utf8,"+encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#141E32"><path d="M3 4v17h6v-12h6v12h6v-16a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2M4.5 16.5h3v3h-3v-3M16.5 16.5h3v3h-3v-3"/><style>@media(prefers-color-scheme:dark){path{fill:#BBB;}}</style></svg>');fav.href=SVG;</script>
+<style>body{padding:2em;background-color:#EEE;color:#444}input{border:none}#conv{background-color:#FFF}#conv:hover{background-color:#CCC}</style>
 </html>
